# fem_python

./: .gitignore  README.md  pyproject.toml
src/fem_python/: fem.py  heat_transfer.py  multi_time_heat_eq.py  utils.py
src/fem_python/dynamics/: heat_transfer.py  stokes.py
src/fem_python/mesh/: convert_mesh.py  generate_mesh.py
src/fem_python/static/: diffusion.py
