[project]
name = "fem_python"
version = "0.1.0"
requires-python = "==3.10.*"
dependencies = [
    "black",
    "isort",
    "fire",
    "numpy==1.*",
    "opencv-python",
    "trimesh",
    "meshio",
    "open3d",
    "sfepy",
    "scikit-fem[all]",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
